src/test/ui/error-codes/E0131.stderr
error[E0131]: `main` function is not allowed to have type parameters
  --> $DIR/E0131.rs:11:8
   |
LL | fn main<T>() {
   |        ^^^ `main` cannot have type parameters

error: aborting due to previous error

For more information about this error, try `rustc --explain E0131`.
